# kondate-concierge

./: .gitignore  README.md  mise.toml
.github/workflows/: python-ci.yml
workflows/: README.md
workflows/crawler/: Makefile  README.md  main.py  pyproject.toml
workflows/crawler/libs/: __init__.py
