[project]
name = "crawler"
version = "0.1.0"
description = "A web crawler of arxiv and tech blog sites."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["loguru~=0.7.3"]

[dependency-groups]
test = ["pytest~=9.0.1", "pytest-console-scripts~=1.4.1"]
lint = ["ruff~=0.14.7", "mypy~=1.19.0"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
exclude = [".venv"]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
